--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<ion-menu [content]="content">
+<ion-menu [content]="content"> 
   <ion-header>
     <ion-toolbar>
       <ion-title>Menu</ion-title>
@@ -6,14 +6,47 @@
   </ion-header>
 
   <ion-content>
-    <ion-list>
-      <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+    <ion-list no-lines>
+      <button menuClose="left" ion-item   *ngFor="let p of pages" (click)="openPage(p)">
+        <ion-icon name="{{p.icon}}" item-left class="iconColor"></ion-icon> 
         {{p.title}}
       </button>
+      <ion-item >
+        <ion-icon name="shirt" item-left class="iconColor"></ion-icon> 
+        Themes
+        <ion-icon name="ios-arrow-down" item-right *ngIf="isShow" (click)="isShow=!isShow"></ion-icon>
+        <ion-icon name="ios-arrow-forward" item-right *ngIf="!isShow" (click)="isShow=!isShow"></ion-icon>
+      </ion-item>
+      <ion-list *ngIf="isShow">
+        <ion-item>
+            <ion-label>Light</ion-label>
+            <ion-checkbox  [(ngModel)]="defaultTheme" (ionChange)="ThemeChange($event)"></ion-checkbox>
+        </ion-item>
+        <ion-item >
+            <ion-label>Dark</ion-label>
+            <ion-checkbox color="dark"  [(ngModel)]="checksTheme" (ionChange)="ThemeChange($event)"></ion-checkbox>
+        </ion-item>
+      </ion-list>
     </ion-list>
+    
   </ion-content>
+
+  <ion-footer>  
+    <div class="menu-footer">  
+        <ion-grid>  
+          <ion-row >  
+            <ion-col  *ngFor="let f of footerpages" >  
+             <button ion-button clear (click)="logOut(f.title)">  
+                <ion-icon name="{{f.icon}}" item-left class="changePadding iconColor" ></ion-icon>   
+                {{f.title}}  
+             </button>  
+            </ion-col>  
+          </ion-row>  
+        </ion-grid>  
+      </div>  
+</ion-footer>  
 
 </ion-menu>
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav [root]="rootPage" #content swipeBackEnabled="false" [class]="selectedTheme"></ion-nav>
