--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,17 +1,20 @@
 page-home {
+    .EnglishBtn{
+        //color: #ccc;
+        position: absolute;
+        right: 45px;
+        top: 1px;
+        //font-size: 2.5rem;
+    }
+
+
     .grid{
         background-color: #eae5e5;
     }
     .item-md.item-block .item-inner{
         border-bottom: none;
     }
-    .EchartsDiv{
-        width:100%;
-        height:220px;
-    }
-    .files{
-        // height: 65%;
-    }
+
     .chart{
         // height: 35%;
         margin-top: 20px;
